--- a/pages/components/map/map.wxml
+++ b/pages/components/map/map.wxml
@@ -1,5 +1,5 @@
 <view>
-    <map id="map" longitude="{{position.longitude}}" latitude="{{position.latitude}}" scale="18" controls="{{controls}}" bindcontroltap="controltap" markers="{{markers}}" bindmarkertap="markertap"  bindregionchange="regionchange" show-location style="width: 100%; height: {{mapHeight}}px;">
+    <map id="map" wx:if="{{position.longitude}}" longitude="{{position.longitude}}" latitude="{{position.latitude}}" scale="18" controls="{{controls}}" bindcontroltap="controltap" markers="{{markers}}" bindmarkertap="markertap"  bindregionchange="regionchange" show-location style="width: 100%; height: {{mapHeight}}px;">
     <cover-view>
       经度：{{position.longitude}},纬度：{{position.latitude}}高度：{{mapHeight}}
     </cover-view>
